--- a/package.json
+++ b/package.json
@@ -107,6 +107,7 @@
   "license": "GPL-3.0-or-later",
   "dependencies": {
     "8labuniswap-sdk": "^1.0.1",
-    "gh-pages": "^6.1.1"
+    "gh-pages": "^6.1.1",
+    "http-proxy-middleware": "^3.0.0"
   }
 }
